--- a/html/index.html
+++ b/html/index.html
@@ -6,14 +6,17 @@
     <title>Google Dark Mode</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/tablet.css" media="screen and (min-width: 768px)">
+    <link rel="stylesheet" href="../css/desktop.css" media="screen and (min-width: 1024px)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     
 </head>
-<body>
+<body class="body">
     <header class="header">
-        <svg class="hamburger-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"></path><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path></svg>
+        <figure class="hamburger-icon-container">
+            <svg class="hamburger-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"></path><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path></svg>
+        </figure>
         
         <nav class="nav">
             <ul class="nav-container">
@@ -42,7 +45,13 @@
             <figure class="micro-icon"></figure>
         </form>
 
+        <div class="button-container">
+            <button class="button">Google Search</button>
+            <button class="button">I'm Feeling Lucky</button>
+        </div>
+
         <p class="offered">Offered by Google in: <a href="google.com">English</a></p>
+
     </main>
 
 
@@ -56,8 +65,6 @@
                 <li>Privacy</li>
                 <li>Terms</li>
             </ul>
-        </div>
-        <div>
             <ul>
                 <li>Advertising</li>
                 <li>Bussines</li>
