--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Dark Mode</title>
+    <title>Hera Google</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/tablet.css" media="screen and (min-width: 768px)">
     <link rel="stylesheet" href="../css/desktop.css" media="screen and (min-width: 1024px)">
